--- a/_posts/2017-03-18-why.md
+++ b/_posts/2017-03-18-why.md
@@ -9,11 +9,11 @@ To quote Cave Johnson from Valves [Portal 2](http://store.steampowered.com/app/6
 
 "Science isn't about why, it's about why not!"
 
-Why not do this?
-
-Well, I spend a good part of my work day reading other peoples security blogs and I gain a huge amount of knowledge through doing so. I figured why can't I can contribute and help others learn as well?
+I spend a good part of my work day reading other peoples security blogs and I gain a huge amount of knowledge through doing so. I figure why can't I can contribute and help others learn as well?
 
 Maybe every once in a while I'll come up with something decent.
+
+So, why not do this?
 
 -----
 
