--- a/_posts/2017-03-18-why.md
+++ b/_posts/2017-03-18-why.md
@@ -15,7 +15,7 @@ Maybe every once in a while I'll come up with something decent.
 
 -----
 
-I originally gained inspiration from [www.malware-traffic-analysis.net](http://http://malware-traffic-analysis.net/) which is written by the elusive ["Brad"](https://twitter.com/malware_traffic).
+I originally gained inspiration from [www.malware-traffic-analysis.net](http://malware-traffic-analysis.net/) which is written by the elusive ["Brad"](https://twitter.com/malware_traffic).
 
 Malware Traffic Analysis provides great write ups on malware campaigns that are generally distributed through email spam. This site helped me understand [EI Test](https://blog.malwarebytes.com/threat-analysis/2014/10/exposing-the-flash-eitest-malware-campaign/) and [Rig-EK](https://blog.malwarebytes.com/cybercrime/exploits/2016/09/rig-exploit-kit-takes-on-large-malvertising-campaign/) which was very useful at the time I came across it.
 
