Revert "New blog post, removed Google Analytics, adjusted posts"
This reverts commit b767b4651b97ea8b9b76fcf7ae7b717ba483f6d4.

--- a/_posts/2017-03-18-why.md
+++ b/_posts/2017-03-18-why.md
@@ -9,23 +9,23 @@ To quote Cave Johnson from Valves [Portal 2](http://store.steampowered.com/app/6
 
 "Science isn't about why, it's about why not!"
 
-I spend a good part of my work day reading other peoples security blogs. I gain a huge amount of knowledge through doing so. I figure why can't I can contribute and help others learn as well?
+I spend a good part of my work day reading other peoples security blogs and I gain a huge amount of knowledge through doing so. I figure why can't I can contribute and help others learn as well?
 
-Every once in a while I could come up with something decent.
+Maybe every once in a while I'll come up with something decent.
 
 -----
 
-I gained inspiration from [www.malware-traffic-analysis.net](http://malware-traffic-analysis.net/) by ["Brad Duncan"](https://twitter.com/malware_traffic).
+I originally gained inspiration from [www.malware-traffic-analysis.net](http://malware-traffic-analysis.net/) which is written by the elusive ["Brad"](https://twitter.com/malware_traffic).
 
-Malware Traffic Analysis provides great write ups on malware campaigns. This site helped me understand [EI Test](https://blog.malwarebytes.com/threat-analysis/2014/10/exposing-the-flash-eitest-malware-campaign/) and [Rig-EK](https://blog.malwarebytes.com/cybercrime/exploits/2016/09/rig-exploit-kit-takes-on-large-malvertising-campaign/) which was very useful at the time I came across it.
+Malware Traffic Analysis provides great write ups on malware campaigns that are generally distributed through email spam. This site helped me understand [EI Test](https://blog.malwarebytes.com/threat-analysis/2014/10/exposing-the-flash-eitest-malware-campaign/) and [Rig-EK](https://blog.malwarebytes.com/cybercrime/exploits/2016/09/rig-exploit-kit-takes-on-large-malvertising-campaign/) which was very useful at the time I came across it.
 
-Since that day I have had Malware Traffic Analysis as part of my daily news digest. It continues to provide great information on current trends.
+Since that day I have had Malware Traffic Analysis as part of my daily news digest and it continues to provide great information on current trends.
 
 ---
 
-My goal for this site is the attempt Malware Traffic Analysis investigations. I will also throw up some other posts when I come across anything interesting.
+My goal for this site is the attempt Malware Traffic Analysis style investigations for my own personal education, I might also throw up some other posts when I think or come across anything interesting.
 
-I aim to publish at least one post a ~~week~~ fortnight but that might vary depending on how busy I am :).
+I aim to publish at least one post a week but that might vary depending on how busy I am :).
 
 ---
 
